--- a/IVEModel/Project.toml
+++ b/IVEModel/Project.toml
@@ -6,7 +6,9 @@ version = "0.1.0"
 [deps]
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
+Revise = "3.7.1"
