--- a/ErgodicOCP/Project.toml
+++ b/ErgodicOCP/Project.toml
@@ -1,38 +1,10 @@
-name = "ErgodicOCP"
-uuid = "1d7617c1-3b9f-471b-96ae-d1affe164574"
-authors = ["kmgovind <kavin.gmk@gmail.com>"]
-version = "0.1.0"
-
 [deps]
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Altro = "5dcf52e5-e2fb-48e0-b826-96f46d2e3e73"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
-Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
-RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
-SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-
-[compat]
-DifferentialEquations = "7.15.0"
-Distributions = "0.25.117"
-FFTW = "1.8.1"
-ForwardDiff = "0.10.38"
-Ipopt = "1.7.1"
-JLD2 = "0.5.11"
-JuMP = "1.23.6"
-KernelFunctions = "0.10.64"
-Optimization = "4.1.1"
-OptimizationOptimJL = "0.4.1"
-Plots = "1.40.9"
-ProgressLogging = "0.1.4"
-RecipesBase = "1.3.4"
-SciMLBase = "2.72.2"
-StaticArrays = "1.9.11"
+RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
+TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
